--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 Hello World
-
-<a href="https://benatjambit.github.io/settings/">link text</a>
+<br>
+https:<br>
+<a href="https://benatjambit.github.io/settings/">link text</a><br>
+<br>
+http:<br>
+<a href="http://benatjambit.github.io/settings/">link text</a><br>
