--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@ https:<br>
 <br>
 http:<br>
 <a href="http://benatjambit.github.io/settings/">link text</a><br>
+AZWAZ:<br>
+<a href="https://www.waz-online.de/settings/">Settings (General)</a><br>
+<br>
+<a href="https://www.waz-online.de/settings/push">Push Settings</a><br>
